0.6.0
Fixed minor ui glitch with hilighting 'c' functions.
Added 'Edit Tool' to manage tools, if tool command is a file, opens it, else copies command to clipboard.
Done bracket matching.
Done docviewer find.
Changed web search to duckduckgo ( google to agrresive about cookies ).
Done search forward/backward in doc viewer.
Fixed tools run sync/async.
Speed tweaks for find definition.
Fixed auto indent.
Done find/replace.
Fixed highlight all.
Fixed backward search.
Fixed saving find/replace lists.
Redone find/replace/replace all/, also in multiple files, wrap etc, TODO backwards.
Fixed toggle bookmark.
Fixed bookmark menu width prefs.
Added clipboard plugin.
Done calling plugrun functions on all plugins at certain poiints ( save/load/switch page etc ).
Fixed current session not being changed.
Changed session file format use:sed -i '1a 50 50 800 600\n#RESERVED\n#RESERVED\n#RESERVED' ~.KKEditQT/sesssions/Session-1 to convert session file ( change 'Session-1' to suit ).
Gui fixes for jumping to book mark.
Fixed passing hex/octal/decimal number to -key.
Changed restore short option from -s to -r.
Fixed tab visisiblity when saving/restoring sessions.
Done runtool msg.
Done selecttabbylabel msg.
Done selecttab msg.
Done search for define msg.
Done gotoline msg.
kkeditmsg now accepts hex/decimal/octal numbers for key.
Added kkeeditqtmsg.
Started scripting.
Done autosave session.
Added theme to 'View' menu.
Updated theme json files.
Fixed turning off syntax highlighting from view menu.
Added json lang plug.
Added variables colour to themes.
Added java lang plug.
Code clean in lang plugs.
Added PHP language plugin.
Added javascript language plugin.
Added html language plugin.
Switched to sytntax highlighting plugins.

0.5.3
Languages installed in ~/.KKEditQT/langplugins now take precedence.
Fixed languages that g=have no multi line comment.
Fixed marking document dirty if changing highlighting.
Fixed ste syntax language in tab menu.
Added makefile language plugin.